     Alexander for reporting on SO (and mnel for filing the bug report): 
     http://stackoverflow.com/questions/21591433/merging-really-not-that-large-data-tables-immediately-results-in-r-being-killed
     
  o  CJ() now orders character vectors in a locale consistent with setkey, #5375. Typically this affected whether
     upper case letters were ordered before lower case letters; they were by setkey() but not by CJ(). Test added and avenues
     for differences closed off and nailed down. Many thanks to Malcolm Hawkes for reporting.

THANKS TO

  o  Zach Mayer for a reproducible segfault in beta test related to radix sorting character
     strings longer than 20. Test added.
     
  o  Simon Biggs for reporting a bug in fread'ing logicals, caught in beta testing. Test added.
  

NOTES

  o  If fread ignores colClasses, the message is upgraded to warning instead of just a line in verbose=TRUE mode.
  
  o  ?last has been improved and if xts is needed but not installed the error message is more helpful, #2728.
     Thanks to Sam Steingold for reporting.
     
  o  ?between corrected. It returns a logical not integer vector, #2671. Thanks to Michael Nelson for reporting.
  
  o  .SD,.N,.I,.GRP and .BY are now exported (as NULL). So that NOTEs aren't produced for them by R CMD check or
     codetools::checkUsage via compiler. utils::globalVariables() was considered, but exporting chosen.
     Thanks to Sam Steingold for raising, #2723.
     
  o  When DT is empty, DT[,col:=""] is no longer a warning. The warning was :
        Supplied 1 items to be assigned to 0 items of column (1 unused)
        
  o  Using rolltolast still works but now issues the following warning :
        "'rolltolast' has been marked 'deprecated' in ?data.table since v1.8.8 on CRAN 3 Mar 2013, see NEWS. Please
         change to the more flexible 'rollends' instead. 'rolltolast' will be removed in the next version."

  o  The key is now retained in NA subsets; e.g.,